welcome.lessons.welcome.bat.bool2.CaughtSpeeding.scala.error
caughtSpeeding:10: error: Boolean does not take parameters
	else ( speed >= 81 ) {
                             ^